[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/Filur.png" type="Texture" id=1]
[ext_resource path="res://scripts/filur.gd" type="Script" id=2]
[ext_resource path="res://sprites/light.png" type="Texture" id=3]
[ext_resource path="res://scripts/zone.gd" type="Script" id=4]
[ext_resource path="res://ljud/mixkit-dagger-woosh-1487.mp3" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 30.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 33 )

[node name="Filuren" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." groups=["player"]]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="Zone" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 4 )

[node name="body" type="CollisionShape2D" parent="Zone"]
shape = SubResource( 2 )

[node name="Vapenspawn" type="Position2D" parent="."]

[node name="NightLight" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 0.890196, 0.447059, 0.0588235, 1 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Zone" to="." method="_on_Zone_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
